force-app/main/default/objects/CampaignMember/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active/Report</label>
    <type>Checkbox</type>
</CustomField>