force-app/main/default/objects/CampaignMember/fields/Advanced_Math_Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Math_Courses_Completed__c</fullName>
    <label>Advanced Math Courses Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>