force-app/main/default/objects/CampaignMember/fields/Age_at_Start_of_CPS_Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Start_of_CPS_Service_Year__c</fullName>
    <description>Used on APR report.</description>
    <formula>IF(Contact.Intake_Date__c &lt; Campaign.Program_Start_Date__c,
( ((Campaign.Program_Start_Date__c -  Contact.Birthdate ) /365) -  (  MOD( ((Campaign.Program_Start_Date__c - Contact.Birthdate) /365),1 ))),

( ((Contact.Intake_Date__c -  Contact.Birthdate ) /365) -  (  MOD( ((Contact.Intake_Date__c - Contact.Birthdate) /365),1 )))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Start of CPS Service Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>