force-app/main/default/objects/CampaignMember/fields/AP_or_IB_Course_Completed__c.field-meta.xml
<CustomField>
    <fullName>AP_or_IB_Course_Completed__c</fullName>
    <label>AP or IB Course Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (school does not offer)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>