force-app/main/default/objects/CampaignMember/fields/Associate_Degree_Attained__c.field-meta.xml
<CustomField>
    <fullName>Associate_Degree_Attained__c</fullName>
    <label>Associate Degree Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (attained associate degree)</fullName>
            </value>
            <value>
                <fullName>No (other postsec credential)</fullName>
            </value>
            <value>
                <fullName>Accepted, deferred to next semester</fullName>
            </value>
            <value>
                <fullName>No assoc. degree, Transferred to 4-yr</fullName>
            </value>
            <value>
                <fullName>Still enrolled in assoc. degree program</fullName>
            </value>
            <value>
                <fullName>Left (incomplete) assoc., no transfer</fullName>
            </value>
            <value>
                <fullName>n/a (still in HS)</fullName>
            </value>
            <value>
                <fullName>n/a (HS grad not enrolled in postsec)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>