force-app/main/default/objects/CampaignMember/fields/Bachelors_Degree_Attained__c.field-meta.xml
<CustomField>
    <fullName>Bachelors_Degree_Attained__c</fullName>
    <label>Bachelor&#39;s Degree Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (bachelor’s degree)</fullName>
            </value>
            <value>
                <fullName>No (other postsec credential)</fullName>
            </value>
            <value>
                <fullName>Accepted, deferred to next semester</fullName>
            </value>
            <value>
                <fullName>Still enrolled in bach. degree program</fullName>
            </value>
            <value>
                <fullName>Left (incomplete)</fullName>
            </value>
            <value>
                <fullName>n/a (still in HS)</fullName>
            </value>
            <value>
                <fullName>n/a (HS grad not enrolled in postsec)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>