force-app/main/default/objects/CampaignMember/fields/Certificate_Diploma_Completed__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Diploma_Completed__c</fullName>
    <label>Certificate/Diploma Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (occupational/educational program)</fullName>
            </value>
            <value>
                <fullName>No (other postsec credential)</fullName>
            </value>
            <value>
                <fullName>Accepted, deferred to next semester</fullName>
            </value>
            <value>
                <fullName>Still enrolled in cert/diploma program</fullName>
            </value>
            <value>
                <fullName>Left (incomplete) cert/diploma program</fullName>
            </value>
            <value>
                <fullName>n/a (still in HS)</fullName>
            </value>
            <value>
                <fullName>n/a (HS grad not enrolled in postsec)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>