force-app/main/default/objects/CampaignMember/fields/Check_In_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Notes__c</fullName>
    <inlineHelpText>This corresponds to the field on the CPS Event check-in form where the Client is asked to note any recent updates to their Contact information.  The Advisor will later review these notes and make any Contact record updates, as needed.</inlineHelpText>
    <label>Check In Notes</label>
    <type>TextArea</type>
</CustomField>