force-app/main/default/objects/CampaignMember/fields/College_Status__c.field-meta.xml
<CustomField>
    <fullName>College_Status__c</fullName>
    <label>College Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted into postsec, not yet enrolled</fullName>
            </value>
            <value>
                <fullName>First Year Postsec student</fullName>
            </value>
            <value>
                <fullName>Postsec student beyond first year</fullName>
            </value>
            <value>
                <fullName>Completed and continuing postsec</fullName>
            </value>
            <value>
                <fullName>Not enrolled, completed postsec prior yr</fullName>
            </value>
            <value>
                <fullName>Left postsec (incomplete) prior year</fullName>
            </value>
            <value>
                <fullName>n/a (did not yet complete HS)</fullName>
            </value>
            <value>
                <fullName>n/a (completed HS, not in postsec)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Accepted postsec, deferred next semester</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>