force-app/main/default/objects/CampaignMember/fields/Competitive_Preference_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Preference_Priorities__c</fullName>
    <label>Competitive Preference Priorities (TS)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received CPP tutoring only</fullName>
            </value>
            <value>
                <fullName>Received CPP mentoring only</fullName>
            </value>
            <value>
                <fullName>Received CPP tutoring and mentoring</fullName>
            </value>
            <value>
                <fullName>Received neither CPP service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>