force-app/main/default/objects/CampaignMember/fields/Contact_Created_From_Event_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_From_Event_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Created From Event Check In</label>
    <type>Checkbox</type>
</CustomField>