force-app/main/default/objects/CampaignMember/fields/CPS_Target_School_City__c.field-meta.xml
<CustomField>
    <fullName>CPS_Target_School_City__c</fullName>
    <description>See description for CPS Target School NCES School ID.</description>
    <formula>Targeted_School__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Target School City</label>
    <type>Text</type>
</CustomField>