force-app/main/default/objects/CampaignMember/fields/CPS_Target_School_NCES_School_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_Target_School_NCES_School_ID__c</fullName>
    <description>This is bringing the secondary school info onto the Campaign Member, so APR report doesn&#39;t need Apex code (because it only needs to go 1 level deep vs. 2).  This field is for APR only and should not be shown on a screen to the user.</description>
    <formula>Targeted_School__r.NCES_School_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Target School NCES School ID</label>
    <type>Text</type>
</CustomField>