force-app/main/default/objects/CampaignMember/fields/CPS_Target_School_Program__c.field-meta.xml
<CustomField>
    <fullName>CPS_Target_School_Program__c</fullName>
    <formula>IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;TS Boston&quot;), &quot;TS Boston;&quot;, NULL)   + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;TS Brockton&quot;), &quot;TS Brockton;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;EOC Boston&quot;), &quot;EOC Boston;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;EOC Brockton&quot;), &quot;EOC Brockton;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;UB Brockton&quot;), &quot;UB Brockton&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Target School Program</label>
    <type>Text</type>
</CustomField>