force-app/main/default/objects/CampaignMember/fields/CPS_Target_School_Zip__c.field-meta.xml
<CustomField>
    <fullName>CPS_Target_School_Zip__c</fullName>
    <description>see Description for CPS Target School NCES School ID.</description>
    <formula>Targeted_School__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Target School Zip</label>
    <type>Text</type>
</CustomField>