force-app/main/default/objects/CampaignMember/fields/Cultural_Activities__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Activities__c</fullName>
    <label>Cultural Activities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (not offered)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>