force-app/main/default/objects/CampaignMember/fields/Date_of_Bachelors_Degree__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Bachelors_Degree__c</fullName>
    <label>Date of Bachelor’s Degree</label>
    <type>Date</type>
</CustomField>