force-app/main/default/objects/CampaignMember/fields/Date_of_Certificate_Diploma__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Certificate_Diploma__c</fullName>
    <label>Date of Certificate/Diploma</label>
    <type>Date</type>
</CustomField>