force-app/main/default/objects/CampaignMember/fields/Date_of_First_Post_Secondary_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Post_Secondary_Enrollment__c</fullName>
    <inlineHelpText>Date of First Post Secondary School Enrollment.</inlineHelpText>
    <label>Date of First Post Secondary Enrollment</label>
    <type>Date</type>
</CustomField>