force-app/main/default/objects/CampaignMember/fields/Date_of_Last_Project_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Project_Service__c</fullName>
    <label>Date of Last Project Service</label>
    <type>Date</type>
</CustomField>