force-app/main/default/objects/CampaignMember/fields/DB_EOC_3_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_3_Support__c</fullName>
    <formula>IF( 
Active__c = True &amp;&amp; 
ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&#39;d secondary school diploma/equiv.&quot;), &#39;Goal # achieved&#39; , 
IF( 
Active__c = True &amp;&amp; (
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 9 (Freshman)&#39;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 10 (Sophomore)&#39;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 11 (Junior)&#39;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Secondary School dropout&#39;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Other&#39;) || 
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A1_Adult w/o Cred Alternative Ed&#39;) || 
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A2_Adult w/o Cred NOT in A1 or A5&#39;) || 
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A5_Adult w/o HS Cred postsec dropout&#39;) 
), &#39;Goal # not achieved&#39;,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC - 3 Support</label>
    <type>Text</type>
</CustomField>