force-app/main/default/objects/CampaignMember/fields/DB_EOC_4_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_4_Support__c</fullName>
    <formula>IF( 
Active__c = True &amp;&amp; 
ISPICKVAL( Financial_Aid_App_Completion__c  , &#39;Completed Fin Aid App (EOC)&#39;), &#39;Goal # achieved&#39; , 
IF( 
Active__c = True &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;In HS Equivalency or Alt. Non-Graded&#39;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A1_Adult w/o Cred Alternative Ed&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A3_HS/GED Grad NOT in postsec&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A4_Adult w/Cred postsec dropout&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A6_Potential postsec transfer&#39;)
), &#39;Goal # not achieved&#39;,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC - 4 Support</label>
    <type>Text</type>
</CustomField>