force-app/main/default/objects/CampaignMember/fields/DB_EOC_6A_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_6A_Support__c</fullName>
    <formula>IF( 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &#39;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&#39;), &#39;Goal # achieved&#39; ,
IF( 
Active__c = True &amp;&amp; ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&#39;d secondary school diploma/equiv.&quot;),&#39;Goal # not achieved&#39;,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC - 6A Support</label>
    <type>Text</type>
</CustomField>