force-app/main/default/objects/CampaignMember/fields/DB_EOC_6B_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_6B_Support__c</fullName>
    <formula>IF( 
ISPICKVAL( Post_Secondary_Enrollment_Status__c, &#39;Deceased&#39;),&#39;&#39;,
IF (
Active__c = True &amp;&amp; 
(
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &#39;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&#39;) ||
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &#39;Had sec diploma &amp; enrolled PSE&#39;)
), &#39;Goal # achieved&#39; ,
IF( 
Active__c = True &amp;&amp; 
(
ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&#39;d secondary school diploma/equiv.&quot;) ||
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A3_HS/GED Grad NOT in postsec&#39;) ||
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A4_Adult w/Cred postsec dropout&#39;) ||
ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A6_Potential postsec transfer&#39;)
),&#39;Goal # not achieved&#39;,&#39;&#39; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC - 6B Support</label>
    <type>Text</type>
</CustomField>