force-app/main/default/objects/CampaignMember/fields/DB_EOC_Brockton_3_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_Brockton_3_Support__c</fullName>
    <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &#39;EOC Brockton&#39;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &#39;2017-2018&#39;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&#39;d secondary school diploma/equiv.&quot;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Secondary School dropout&#39;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A1_Adult w/o Cred Alternative Ed&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A2_Adult w/o Cred NOT in A1 or A5&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A5_Adult w/o HS Cred postsec dropout&#39;)
), &#39;Goal # achieved&#39; , &#39;Goal # not achieved&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC Brockton - 3 DELETE</label>
    <type>Text</type>
</CustomField>