force-app/main/default/objects/CampaignMember/fields/DB_EOC_Brockton_5_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_Brockton_5_Support__c</fullName>
    <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &#39;EOC Brockton&#39;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &#39;2017-2018&#39;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL(Obj_C_Post_Secondary_Ed_Admissions__c , &#39;Applied&#39;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Secondary School dropout&#39;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A1_Adult w/o Cred Alternative Ed&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A3_HS/GED Grad NOT in postsec&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A4_Adult w/Cred postsec dropout&#39;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &#39;A6_Potential postsec transfer&#39;)
), &#39;Goal # achieved&#39; , &#39;Goal # not achieved&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC Brockton - 5 DELETE</label>
    <type>Text</type>
</CustomField>