force-app/main/default/objects/CampaignMember/fields/DB_EOC_Brockton_6A_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_EOC_Brockton_6A_Support__c</fullName>
    <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &#39;EOC Brockton&#39;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &#39;2017-2018&#39;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &#39;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&#39;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Secondary School dropout&#39;)
), &#39;Goal # achieved&#39; , &#39;Goal # not achieved&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - EOC Brockton - 6A DELETE</label>
    <type>Text</type>
</CustomField>