force-app/main/default/objects/CampaignMember/fields/DB_TS_4A_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_TS_4A_Support__c</fullName>
    <formula>IF( 
Active__c = True &amp;&amp; 
(ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (rigorous)&#39;) ||
ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (non-rigorous)&#39;) ), &#39;Goal # achieved&#39; , 
IF(
Active__c = True &amp;&amp; 
(ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &#39;Grade 12 (Senior)&#39;) 
), &#39;Goal # not achieved&#39;,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - TS - 4A Support</label>
    <type>Text</type>
</CustomField>