force-app/main/default/objects/CampaignMember/fields/DB_TS_5_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_TS_5_Support__c</fullName>
    <formula>IF( 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c, &#39;Enrolled or Deferred PSE (TS)&#39;) &amp;&amp;
( 
ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (non-rigorous)&#39;) ||
ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (rigorous)&#39;)
), &#39;Goal # achieved&#39; ,
IF( Active__c = True &amp;&amp; 
( ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (non-rigorous)&#39;) ||
ISPICKVAL( Education_Status_at_End_Senior__c, &#39;Grad in standard num yrs (rigorous)&#39;)
), &#39;Goal # not achieved&#39;,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - TS - 5 Support</label>
    <type>Text</type>
</CustomField>