force-app/main/default/objects/CampaignMember/fields/DB_TS_Brockton_5_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_TS_Brockton_5_Support__c</fullName>
    <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &#39;TS Brockton&#39;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &#39;2017-2018&#39;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &#39;Enrolled or Deferred PSE (TS)&#39;) 
, &#39;Goal # achieved&#39; , &#39;Goal # not achieved&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - TS Brockton - 5 DELETE</label>
    <type>Text</type>
</CustomField>