force-app/main/default/objects/CampaignMember/fields/DB_UB_3_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_UB_3_Support__c</fullName>
    <description>Academic Performance - GPA</description>
    <formula>IF(
Active__c = True &amp;&amp; 
(
  GPA__c &gt;=2.500 &amp;&amp; GPA__c &lt;5.00
), &#39;Goal # achieved&#39; ,
IF (Active__c = True, &#39;Goal # not achieved&#39;,&#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - UB - 3 Support</label>
    <type>Text</type>
</CustomField>