force-app/main/default/objects/CampaignMember/fields/DB_UB_4_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_UB_4_Support__c</fullName>
    <description>Academic Performance - Standardized Test</description>
    <formula>IF( 
  Active__c = True &amp;&amp; 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &#39;Grade 12 (Senior)&#39;) &amp;&amp;
  ISPICKVAL( Met_State_Math__c , &#39;Yes&#39;) &amp;&amp;
  ISPICKVAL( Met_State_Reading__c , &#39;Yes&#39;)
, &#39;Goal # achieved&#39; , 
IF (Active__c = True &amp;&amp; ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &#39;Grade 12 (Senior)&#39;)
, &#39;Goal # not achieved&#39;, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - UB - 4 Support</label>
    <type>Text</type>
</CustomField>