force-app/main/default/objects/CampaignMember/fields/DB_UB_5_Support__c.field-meta.xml
<CustomField>
    <fullName>DB_UB_5_Support__c</fullName>
    <description>Secondary School Retention and Graduation (no longer reported!!!)</description>
    <formula>IF( 
Active__c = True, &#39;Goal # achieved&#39; , &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB - UB - 5 Support</label>
    <type>Text</type>
</CustomField>