force-app/main/default/objects/CampaignMember/fields/Deceased_or_Incapacitated__c.field-meta.xml
<CustomField>
    <fullName>Deceased_or_Incapacitated__c</fullName>
    <label>Deceased or Incapacitated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deceased (prior-year partic.)</fullName>
            </value>
            <value>
                <fullName>Perm. incapacitated (prior-year partic.)</fullName>
            </value>
            <value>
                <fullName>Deceased (current-year partic.)</fullName>
            </value>
            <value>
                <fullName>Perm. incapacitated (current-year partic.)</fullName>
            </value>
            <value>
                <fullName>n/a (not deceased nor perm. incapacita)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>